--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "member-comment-system",
+  "homepage": "https://chiahsiu0801.github.io/member-comment-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
