--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.5.0",
     "axios": "^1.6.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "lucide-react": "^0.383.0",
     "mongodb": "^6.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -27,7 +29,10 @@
     "react-hook-form": "^7.49.3",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.4.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.41",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
