--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_BASENAME=/member-comment-app
 
-VITE_API_URL = https://realtime-chatroom-5e6206396b62.herokuapp.com
+# VITE_API_URL = https://realtime-chatroom-5e6206396b62.herokuapp.com
+VITE_API_URL = http://localhost:5000
